<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_results"
        android:icon="@drawable/ic_results"
        android:title="@string/results"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_find_all"
        android:icon="@drawable/ic_auto"
        android:title="@string/find_all"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_pdf"
        android:title="@string/pdf"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_template"
        android:title="@string/template"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_apply_template"
        android:title="@string/apply_template"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_camera"
        android:title="@string/take_photo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open"
        android:title="@string/open_photo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_image"
        android:title="@string/share_image"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear"
        android:title="@string/clear_rings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        app:showAsAction="never" />
</menu>
